--- a/element-styles/unewnavigation/unewnavigation_default.css
+++ b/element-styles/unewnavigation/unewnavigation_default.css
@@ -2,22 +2,24 @@ div[data-style='burger'] ul.menu {
     background: #67a8a7;
 }
 div.responsive_nav_toggler {
-    width: 30px;
-    height: 30px;
-    padding-top: 10px;
+    width: 34px;
+    height: 34px;
+    padding-top: 12px;
+    padding-left:9px;
     border: 0;
     border-radius: 50%;
     -moz-border-radius: 50%;
     -webkit-border-radius: 50%;
     background: #ufc7;
     opacity: 1;
-    transition: opacity 0.25s ease-in;
-    -ms-transition: opacity 0.25s ease-in;
-    -moz-transition: opacity 0.25s ease-in;
-    -webkit-transition: opacity 0.25s ease-in;
+    transition: opacity 0.2s ease-in;
+    -ms-transition: opacity 0.2s ease-in;
+    -moz-transition: opacity 0.2s ease-in;
+    -webkit-transition: opacity 0.2s ease-in;
+    z-index: 0;
 }
 div.responsive_nav_toggler:hover {
-    opacity: 0.6;
+    opacity: 0.8;
 }
 div.responsive_nav_toggler > div {
     width: 16px;
@@ -29,10 +31,10 @@ div.responsive_nav_toggler > div:last-child {
     margin-bottom: 0;
 }
  i.burger_nav_close {
-    width: 30px;
-    height: 30px;
+    width: 34px;
+    height: 34px;
     margin: 20px 0 20px 20px;
-    padding-top: 1px;
+    padding-top: 2px;
     background: #ufc7;
     box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -41,9 +43,20 @@ div.responsive_nav_toggler > div:last-child {
     line-height: 29px;
     font-weight: 300;
     text-align: center;
+    opacity: 1;
+    transition: opacity 0.2s ease-in;
+    -ms-transition: opacity 0.2s ease-in;
+    -moz-transition: opacity 0.2s ease-in;
+    -webkit-transition: opacity 0.2s ease-in;
 }
+
+i.burger_nav_close:hover {
+    opacity: 0.8;
+}
+
 div.upfront-navigation div.burger_overlay {
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.8);
+    z-index: 1;
 }
 div[data-style='burger'] ul.menu > li.menu-item > a {
     color: #ufc6;
